Fix shift down ps5-little-img

--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ li a img.lens {
 .wrapper-ps5-little-box {
     height: 100%;
     opacity: 0.6;
+    border-bottom: 2px solid transparent;
 }
 
 
@@ -191,7 +192,7 @@ li a img.lens {
     height: 100%;
     opacity: 1;
     transition: .1s ease-in;
-    border-bottom: 1px solid var(--link-blue-color);
+    border-bottom: 2px solid var(--link-blue-color);
 }
 
 sup {
